--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="zh-CN">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="%PUBLIC_URL%/icons/logo.png" type="image/x-icon" />
         <meta name="theme-color" content="#AEF01F" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0,shrink-to-fit=no" />
         <meta name="format-detection" content="telephone=no">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="飞扬俱乐部杂志阅览" content="飞扬俱乐部《i飞扬》杂志阅览网站。" />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/logo.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title id="title">i飞扬电子杂志 | 四川大学飞扬俱乐部</title>
+        <title id="title">飞扬俱乐部 | i飞扬电子杂志</title>
     </head>
     <body>
         <noscript>你需要启用 JavaScript 来使用该应用。</noscript>
